deploy: f6f0c2d5c0ddce15f5314d0fc5fb29a943d1bba4

--- a/print.html
+++ b/print.html
@@ -90,7 +90,7 @@
 
     <nav id="sidebar" class="sidebar" aria-label="Table of contents">
         <div class="sidebar-scrollbox">
-            <ol class="chapter"><li class="chapter-item expanded "><a href="intro/intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded "><a href="go/go.html"><strong aria-hidden="true">2.</strong> GO</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="go/gin_zo.html"><strong aria-hidden="true">2.1.</strong> Gin + ZincObserve</a></li><li class="chapter-item "><a href="go/pstash.html"><strong aria-hidden="true">2.2.</strong> pstash(My Project)</a></li></ol></li><li class="chapter-item expanded "><a href="rust/rust.html"><strong aria-hidden="true">3.</strong> RUST</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust/tower/rust_tower.html"><strong aria-hidden="true">3.1.</strong> Tower</a></li><li class="chapter-item "><a href="rust/mini-redis/mini-redis.html"><strong aria-hidden="true">3.2.</strong> mini-redis</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust/mini-redis/hello_tokio.html"><strong aria-hidden="true">3.2.1.</strong> Hello Tokio</a></li><li class="chapter-item "><a href="rust/mini-redis/spawning.html"><strong aria-hidden="true">3.2.2.</strong> Spawning</a></li><li class="chapter-item "><a href="rust/mini-redis/shared_state.html"><strong aria-hidden="true">3.2.3.</strong> Shared state</a></li><li class="chapter-item "><a href="rust/mini-redis/channels.html"><strong aria-hidden="true">3.2.4.</strong> Channels</a></li><li class="chapter-item "><a href="rust/mini-redis/io.html"><strong aria-hidden="true">3.2.5.</strong> I/O</a></li><li class="chapter-item "><a href="rust/mini-redis/framing.html"><strong aria-hidden="true">3.2.6.</strong> Framing</a></li><li class="chapter-item "><a href="rust/mini-redis/async_in_depth.html"><strong aria-hidden="true">3.2.7.</strong> Async in depth</a></li><li class="chapter-item "><a href="rust/mini-redis/select.html"><strong aria-hidden="true">3.2.8.</strong> Select</a></li><li class="chapter-item "><a href="rust/mini-redis/streams.html"><strong aria-hidden="true">3.2.9.</strong> Streams</a></li></ol></li><li class="chapter-item "><a href="rust/tokio/tokio.html"><strong aria-hidden="true">3.3.</strong> Tokio</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust/tokio/topics.html"><strong aria-hidden="true">3.3.1.</strong> Topics TODO</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust/tokio/bridging_with_sync_code.html"><strong aria-hidden="true">3.3.1.1.</strong> Bridging with sync code TODO</a></li><li class="chapter-item "><a href="rust/tokio/graceful_shutdown.html"><strong aria-hidden="true">3.3.1.2.</strong> Graceful Shutdown TODO</a></li><li class="chapter-item "><a href="rust/tokio/getting_started_with_tracing.html"><strong aria-hidden="true">3.3.1.3.</strong> Getting started with Tracing TODO</a></li><li class="chapter-item "><a href="rust/tokio/next_steps_with_tracing.html"><strong aria-hidden="true">3.3.1.4.</strong> Next steps with Tracing TODO</a></li></ol></li></ol></li></ol></li><li class="chapter-item expanded "><a href="other-categories/other-categories.html"><strong aria-hidden="true">4.</strong> Other categories</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="other-categories/archlinux/archlinux.html"><strong aria-hidden="true">4.1.</strong> archlinux</a></li><li class="chapter-item "><a href="other-categories/algorithm/algorithm.html"><strong aria-hidden="true">4.2.</strong> algorithm</a></li><li class="chapter-item "><a href="other-categories/nc/nc.html"><strong aria-hidden="true">4.3.</strong> nmap-netcat(nc)</a></li><li class="chapter-item "><a href="other-categories/mkcert/mkcert.html"><strong aria-hidden="true">4.4.</strong> mkcert</a></li><li class="chapter-item "><a href="other-categories/aria2/aria2.html"><strong aria-hidden="true">4.5.</strong> aria2</a></li><li class="chapter-item "><a href="other-categories/postgres/postgres.html"><strong aria-hidden="true">4.6.</strong> postgres</a></li><li class="chapter-item "><a href="other-categories/pre-commit/pre-commit.html"><strong aria-hidden="true">4.7.</strong> pre-commit</a></li><li class="chapter-item "><a href="other-categories/minio/minio.html"><strong aria-hidden="true">4.8.</strong> minio</a></li><li class="chapter-item "><a href="other-categories/git/git.html"><strong aria-hidden="true">4.9.</strong> git</a></li><li class="chapter-item "><a href="other-categories/croc/croc.html"><strong aria-hidden="true">4.10.</strong> croc</a></li><li class="chapter-item "><a href="other-categories/reality/reality.html"><strong aria-hidden="true">4.11.</strong> REALITY</a></li></ol></li><li class="chapter-item expanded "><a href="blockchain/blockchain.html"><strong aria-hidden="true">5.</strong> Blockchain</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="blockchain/fundamentals.html"><strong aria-hidden="true">5.1.</strong> fundamentals</a></li><li class="chapter-item "><a href="blockchain/substrate/substrate.html"><strong aria-hidden="true">5.2.</strong> substrate TODO</a></li></ol></li><li class="chapter-item expanded "><a href="issues/issues.html"><strong aria-hidden="true">6.</strong> issues and solutions</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="isuues/linux/linux_issues.html"><strong aria-hidden="true">6.1.</strong> linux</a></li><li class="chapter-item "><a href="issues/docker/docker_issues.html"><strong aria-hidden="true">6.2.</strong> docker</a></li><li class="chapter-item "><a href="issues/mysql/mysql_issues.html"><strong aria-hidden="true">6.3.</strong> mysql</a></li><li class="chapter-item "><a href="issues/gitea/gitea_issues.html"><strong aria-hidden="true">6.4.</strong> gitea</a></li><li class="chapter-item "><a href="issues/nginx/nginx_issues.html"><strong aria-hidden="true">6.5.</strong> nginx</a></li></ol></li><li class="chapter-item expanded "><a href="links/links.html"><strong aria-hidden="true">7.</strong> Links</a></li></ol>
+            <ol class="chapter"><li class="chapter-item expanded "><a href="intro/intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded "><a href="go/go.html"><strong aria-hidden="true">2.</strong> GO</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="go/gin_zo.html"><strong aria-hidden="true">2.1.</strong> Gin + ZincObserve</a></li><li class="chapter-item "><a href="go/pstash.html"><strong aria-hidden="true">2.2.</strong> pstash(My Project)</a></li></ol></li><li class="chapter-item expanded "><a href="rust/rust.html"><strong aria-hidden="true">3.</strong> RUST</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust/tower/rust_tower.html"><strong aria-hidden="true">3.1.</strong> Tower</a></li><li class="chapter-item "><a href="rust/mini-redis/mini-redis.html"><strong aria-hidden="true">3.2.</strong> mini-redis</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust/mini-redis/hello_tokio.html"><strong aria-hidden="true">3.2.1.</strong> Hello Tokio</a></li><li class="chapter-item "><a href="rust/mini-redis/spawning.html"><strong aria-hidden="true">3.2.2.</strong> Spawning</a></li><li class="chapter-item "><a href="rust/mini-redis/shared_state.html"><strong aria-hidden="true">3.2.3.</strong> Shared state</a></li><li class="chapter-item "><a href="rust/mini-redis/channels.html"><strong aria-hidden="true">3.2.4.</strong> Channels</a></li><li class="chapter-item "><a href="rust/mini-redis/io.html"><strong aria-hidden="true">3.2.5.</strong> I/O</a></li><li class="chapter-item "><a href="rust/mini-redis/framing.html"><strong aria-hidden="true">3.2.6.</strong> Framing</a></li><li class="chapter-item "><a href="rust/mini-redis/async_in_depth.html"><strong aria-hidden="true">3.2.7.</strong> Async in depth</a></li><li class="chapter-item "><a href="rust/mini-redis/select.html"><strong aria-hidden="true">3.2.8.</strong> Select</a></li><li class="chapter-item "><a href="rust/mini-redis/streams.html"><strong aria-hidden="true">3.2.9.</strong> Streams</a></li></ol></li><li class="chapter-item "><a href="rust/tokio/tokio.html"><strong aria-hidden="true">3.3.</strong> Tokio</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust/tokio/topics.html"><strong aria-hidden="true">3.3.1.</strong> Topics TODO</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust/tokio/bridging_with_sync_code.html"><strong aria-hidden="true">3.3.1.1.</strong> Bridging with sync code TODO</a></li><li class="chapter-item "><a href="rust/tokio/graceful_shutdown.html"><strong aria-hidden="true">3.3.1.2.</strong> Graceful Shutdown TODO</a></li><li class="chapter-item "><a href="rust/tokio/getting_started_with_tracing.html"><strong aria-hidden="true">3.3.1.3.</strong> Getting started with Tracing TODO</a></li><li class="chapter-item "><a href="rust/tokio/next_steps_with_tracing.html"><strong aria-hidden="true">3.3.1.4.</strong> Next steps with Tracing TODO</a></li></ol></li></ol></li></ol></li><li class="chapter-item expanded "><a href="other-categories/other-categories.html"><strong aria-hidden="true">4.</strong> Other categories</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="other-categories/archlinux/archlinux.html"><strong aria-hidden="true">4.1.</strong> archlinux</a></li><li class="chapter-item "><a href="other-categories/algorithm/algorithm.html"><strong aria-hidden="true">4.2.</strong> algorithm</a></li><li class="chapter-item "><a href="other-categories/nc/nc.html"><strong aria-hidden="true">4.3.</strong> nmap-netcat(nc)</a></li><li class="chapter-item "><a href="other-categories/mq/mq.html"><strong aria-hidden="true">4.4.</strong> mq</a></li><li class="chapter-item "><a href="other-categories/mkcert/mkcert.html"><strong aria-hidden="true">4.5.</strong> mkcert</a></li><li class="chapter-item "><a href="other-categories/aria2/aria2.html"><strong aria-hidden="true">4.6.</strong> aria2</a></li><li class="chapter-item "><a href="other-categories/postgres/postgres.html"><strong aria-hidden="true">4.7.</strong> postgres</a></li><li class="chapter-item "><a href="other-categories/pre-commit/pre-commit.html"><strong aria-hidden="true">4.8.</strong> pre-commit</a></li><li class="chapter-item "><a href="other-categories/minio/minio.html"><strong aria-hidden="true">4.9.</strong> minio</a></li><li class="chapter-item "><a href="other-categories/git/git.html"><strong aria-hidden="true">4.10.</strong> git</a></li><li class="chapter-item "><a href="other-categories/croc/croc.html"><strong aria-hidden="true">4.11.</strong> croc</a></li><li class="chapter-item "><a href="other-categories/reality/reality.html"><strong aria-hidden="true">4.12.</strong> REALITY</a></li></ol></li><li class="chapter-item expanded "><a href="blockchain/blockchain.html"><strong aria-hidden="true">5.</strong> Blockchain</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="blockchain/fundamentals.html"><strong aria-hidden="true">5.1.</strong> fundamentals</a></li><li class="chapter-item "><a href="blockchain/substrate/substrate.html"><strong aria-hidden="true">5.2.</strong> substrate TODO</a></li></ol></li><li class="chapter-item expanded "><a href="issues/issues.html"><strong aria-hidden="true">6.</strong> issues and solutions</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="isuues/linux/linux_issues.html"><strong aria-hidden="true">6.1.</strong> linux</a></li><li class="chapter-item "><a href="issues/docker/docker_issues.html"><strong aria-hidden="true">6.2.</strong> docker</a></li><li class="chapter-item "><a href="issues/mysql/mysql_issues.html"><strong aria-hidden="true">6.3.</strong> mysql</a></li><li class="chapter-item "><a href="issues/gitea/gitea_issues.html"><strong aria-hidden="true">6.4.</strong> gitea</a></li><li class="chapter-item "><a href="issues/nginx/nginx_issues.html"><strong aria-hidden="true">6.5.</strong> nginx</a></li></ol></li><li class="chapter-item expanded "><a href="links/links.html"><strong aria-hidden="true">7.</strong> Links</a></li></ol>
         </div>
         <div id="sidebar-resize-handle" class="sidebar-resize-handle">
             <div class="sidebar-resize-indicator"></div>
@@ -4572,6 +4572,84 @@ nc -lp 6666 -e /bin/bash
 <p>与上面的相反，它是拒绝。</p>
 <h2 id="更多功能请自行探索"><a class="header" href="#更多功能请自行探索">更多功能请自行探索</a></h2>
 <p><code>ncat</code> 提供了许多功能，这些功能可以相互组合，或者配合其它东西来使用，能玩出的花样是非常多的。</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="message-queue"><a class="header" href="#message-queue">message queue</a></h1>
+<h2 id="消息队列杂谈"><a class="header" href="#消息队列杂谈">消息队列杂谈</a></h2>
+<h3 id="通过在在程序中嵌入-mq-来缩减成本的可能性"><a class="header" href="#通过在在程序中嵌入-mq-来缩减成本的可能性">通过在在程序中嵌入 MQ 来缩减成本的可能性</a></h3>
+<p><a href="https://kafka.apache.org/">kafka</a>由 scala 和 java 编写，<a href="https://rocketmq.apache.org/">rocketmq</a>,<a href="https://pulsar.apache.org/">pulsar</a>同样需要 java 环境，虽说它们不是不能嵌入，但是不太适合此类场景。而<a href="https://www.rabbitmq.com/">rabbitmq</a>需要 erlang 环境，erlang 国内鲜有人知。activemq 已经渐渐淡出视野。</p>
+<p><a href="https://nats.io">nats</a>也是一种消息系统，并且是<a href="https://landscape.cncf.io/?item=app-definition-and-development--streaming-messaging--nats">CNCF</a>的孵化项目，不像 kafka、rocketmq 在国内大范围使用，但是同样可靠。</p>
+<p>这一部分考虑到需要尝试一个能够被很容易嵌入的 MQ，可以尝试采用 nats，以下是一些考量：</p>
+<ul>
+<li>nats 由 go 编写，而 go 默认即是编译为单一二进制程序，并且 go 默认即是采用静态编译，所以也不需要运行的时候链接动态库，嵌入时需要考虑的面较少。</li>
+<li>nats 的 jetstream 提供了可靠的持久层。</li>
+<li>nats 内置集群能力，并且对于 jetstream cluster，使用了 nats 优化后的 raft 算法（和 2.8 以后的 kafka 的 kraft 类似）。</li>
+<li>nats 相对大多消息系统来说，资源占用更低，嵌入影响相对较小。</li>
+</ul>
+<p>以下展示一个简短的嵌入在 go 程序中的示例，其它语言可以通过嵌入二进制 nats server 来实现。</p>
+<pre><code class="language-go">package main
+
+import (
+	"time"
+
+	"github.com/nats-io/nats-server/v2/server"
+	"github.com/nats-io/nats.go"
+)
+
+func main() {
+	// 通过 server.Options 可以配置 jetstream, cluster 等选项
+	server_ops := &amp;server.Options{}
+
+	// 通过 server_ops 初始化 server
+	ns, err := server.NewServer(server_ops)
+	if err != nil {
+		panic(err)
+	}
+
+	// 启动 server
+	go ns.Start()
+
+	// 程序退出时正确关闭 server
+	defer ns.WaitForShutdown()
+	defer ns.Shutdown()
+
+	// 等待 server 准备好接受连接
+	if !ns.ReadyForConnections(5 * time.Second) {
+		panic("nats server 未能在指定时间内准备好接受连接")
+	}
+
+	nc, err := nats.Connect(ns.ClientURL())
+	if err != nil {
+		panic(err)
+	}
+
+	subject := "demo-subject"
+
+	// 订阅消息
+	nc.Subscribe(subject, func(msg *nats.Msg) {
+		println("Received message:", string(msg.Data))
+	})
+
+	// 发布消息
+	nc.Publish(subject, []byte("Hello World!"))
+
+	// 等待消息处理完成
+	time.Sleep(1 * time.Second)
+
+	// 关闭连接
+	nc.Close()
+}
+
+</code></pre>
+<pre><code class="language-bash"># go run .
+Received message: Hello World!
+</code></pre>
+<p>目前有个小问题就是 nats 仅支持 tcp socket，不支持 IPC,比如 unix socket。这样需要占用一个 tcp 端口，通过 localhost(127.0.0.1) 或者绑定到本机的 ip 地址进行通信虽说要经过操作系统内核网络栈，但是通常情况下至少不需要走物理网卡了。</p>
+<p>如果介意正在使用的网络接口上的端口被占用，可以起一个虚拟接口，监听在虚拟接口上。当然，这样同样引入了一个新的接口，也许也不太舒服。</p>
+<p>社区有人测试过，嵌入的 nats 和外部运行的 nats 在百万级的消息冲击下性能近似。</p>
+<blockquote>
+<p>Performance is an important aspect of every application, so let’s compare the performance for using NATS as an embedded or external service (cli, docker etc). We will run a benchmark for 1 million messages for 8 intervals.</p>
+<p>Seems like there is not much difference in performance, that’s really impressive considering we are testing for millions of messages.</p>
+<p><img src="https://raw.githubusercontent.com/m4n5ter/m4n5ter.github.io/main/assets/nats-bench.png" alt="benchmark" /></p>
+</blockquote>
 <div style="break-before: page; page-break-before: always;"></div><h2 id="mkcert"><a class="header" href="#mkcert">mkcert</a></h2>
 <p><code>mkcert</code> 是 GO 编写的，一个简单的<strong>零配置</strong>的，用来生成自签证书的工具。</p>
 <p>下面给一个简单的示例，在本地生成自签证书，并使用让 nc 使用生成的证书。</p>
