deploy: 7ed5ebe1eb1f3f40a0e73ba0d9fde322b9c7cc54

--- a/print.html
+++ b/print.html
@@ -90,7 +90,7 @@
 
     <nav id="sidebar" class="sidebar" aria-label="Table of contents">
         <div class="sidebar-scrollbox">
-            <ol class="chapter"><li class="chapter-item expanded "><a href="intro/intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded "><a href="go/go.html"><strong aria-hidden="true">2.</strong> GO</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="go/gin_zo.html"><strong aria-hidden="true">2.1.</strong> Gin + ZincObserve</a></li><li class="chapter-item "><a href="go/pstash.html"><strong aria-hidden="true">2.2.</strong> pstash(My Project)</a></li></ol></li><li class="chapter-item expanded "><a href="rust/rust.html"><strong aria-hidden="true">3.</strong> RUST</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust/tower/rust_tower.html"><strong aria-hidden="true">3.1.</strong> Tower</a></li><li class="chapter-item "><a href="rust/mini-redis/mini-redis.html"><strong aria-hidden="true">3.2.</strong> mini-redis</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust/mini-redis/hello_tokio.html"><strong aria-hidden="true">3.2.1.</strong> Hello Tokio</a></li><li class="chapter-item "><a href="rust/mini-redis/spawning.html"><strong aria-hidden="true">3.2.2.</strong> Spawning</a></li><li class="chapter-item "><a href="rust/mini-redis/shared_state.html"><strong aria-hidden="true">3.2.3.</strong> Shared state</a></li><li class="chapter-item "><a href="rust/mini-redis/channels.html"><strong aria-hidden="true">3.2.4.</strong> Channels</a></li><li class="chapter-item "><a href="rust/mini-redis/io.html"><strong aria-hidden="true">3.2.5.</strong> I/O</a></li><li class="chapter-item "><a href="rust/mini-redis/framing.html"><strong aria-hidden="true">3.2.6.</strong> Framing</a></li><li class="chapter-item "><a href="rust/mini-redis/async_in_depth.html"><strong aria-hidden="true">3.2.7.</strong> Async in depth</a></li><li class="chapter-item "><a href="rust/mini-redis/select.html"><strong aria-hidden="true">3.2.8.</strong> Select</a></li><li class="chapter-item "><a href="rust/mini-redis/streams.html"><strong aria-hidden="true">3.2.9.</strong> Streams</a></li></ol></li><li class="chapter-item "><a href="rust/tokio/tokio.html"><strong aria-hidden="true">3.3.</strong> Tokio</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust/tokio/topics.html"><strong aria-hidden="true">3.3.1.</strong> Topics TODO</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust/tokio/bridging_with_sync_code.html"><strong aria-hidden="true">3.3.1.1.</strong> Bridging with sync code TODO</a></li><li class="chapter-item "><a href="rust/tokio/graceful_shutdown.html"><strong aria-hidden="true">3.3.1.2.</strong> Graceful Shutdown TODO</a></li><li class="chapter-item "><a href="rust/tokio/getting_started_with_tracing.html"><strong aria-hidden="true">3.3.1.3.</strong> Getting started with Tracing TODO</a></li><li class="chapter-item "><a href="rust/tokio/next_steps_with_tracing.html"><strong aria-hidden="true">3.3.1.4.</strong> Next steps with Tracing TODO</a></li></ol></li></ol></li></ol></li><li class="chapter-item expanded "><a href="network/network.html"><strong aria-hidden="true">4.</strong> Network</a></li><li class="chapter-item expanded "><a href="other-categories/other-categories.html"><strong aria-hidden="true">5.</strong> Other categories</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="other-categories/archlinux/archlinux.html"><strong aria-hidden="true">5.1.</strong> archlinux</a></li><li class="chapter-item "><a href="other-categories/algorithm/algorithm.html"><strong aria-hidden="true">5.2.</strong> algorithm</a></li><li class="chapter-item "><a href="other-categories/nc/nc.html"><strong aria-hidden="true">5.3.</strong> nmap-netcat(nc)</a></li><li class="chapter-item "><a href="other-categories/mq/mq.html"><strong aria-hidden="true">5.4.</strong> mq</a></li><li class="chapter-item "><a href="other-categories/mkcert/mkcert.html"><strong aria-hidden="true">5.5.</strong> mkcert</a></li><li class="chapter-item "><a href="other-categories/aria2/aria2.html"><strong aria-hidden="true">5.6.</strong> aria2</a></li><li class="chapter-item "><a href="other-categories/postgres/postgres.html"><strong aria-hidden="true">5.7.</strong> postgres</a></li><li class="chapter-item "><a href="other-categories/pre-commit/pre-commit.html"><strong aria-hidden="true">5.8.</strong> pre-commit</a></li><li class="chapter-item "><a href="other-categories/minio/minio.html"><strong aria-hidden="true">5.9.</strong> minio</a></li><li class="chapter-item "><a href="other-categories/git/git.html"><strong aria-hidden="true">5.10.</strong> git</a></li><li class="chapter-item "><a href="other-categories/croc/croc.html"><strong aria-hidden="true">5.11.</strong> croc</a></li><li class="chapter-item "><a href="other-categories/reality/reality.html"><strong aria-hidden="true">5.12.</strong> REALITY</a></li></ol></li><li class="chapter-item expanded "><a href="blockchain/blockchain.html"><strong aria-hidden="true">6.</strong> Blockchain</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="blockchain/fundamentals.html"><strong aria-hidden="true">6.1.</strong> fundamentals</a></li><li class="chapter-item "><a href="blockchain/substrate/substrate.html"><strong aria-hidden="true">6.2.</strong> substrate TODO</a></li></ol></li><li class="chapter-item expanded "><a href="issues/issues.html"><strong aria-hidden="true">7.</strong> issues and solutions</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="isuues/linux/linux_issues.html"><strong aria-hidden="true">7.1.</strong> linux</a></li><li class="chapter-item "><a href="issues/docker/docker_issues.html"><strong aria-hidden="true">7.2.</strong> docker</a></li><li class="chapter-item "><a href="issues/mysql/mysql_issues.html"><strong aria-hidden="true">7.3.</strong> mysql</a></li><li class="chapter-item "><a href="issues/gitea/gitea_issues.html"><strong aria-hidden="true">7.4.</strong> gitea</a></li><li class="chapter-item "><a href="issues/nginx/nginx_issues.html"><strong aria-hidden="true">7.5.</strong> nginx</a></li></ol></li><li class="chapter-item expanded "><a href="links/links.html"><strong aria-hidden="true">8.</strong> Links</a></li></ol>
+            <ol class="chapter"><li class="chapter-item expanded "><a href="intro/intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded "><a href="go/go.html"><strong aria-hidden="true">2.</strong> GO</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="go/gin_zo.html"><strong aria-hidden="true">2.1.</strong> Gin + ZincObserve</a></li><li class="chapter-item "><a href="go/pstash.html"><strong aria-hidden="true">2.2.</strong> pstash(My Project)</a></li></ol></li><li class="chapter-item expanded "><a href="rust/rust.html"><strong aria-hidden="true">3.</strong> RUST</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust/tower/rust_tower.html"><strong aria-hidden="true">3.1.</strong> Tower</a></li><li class="chapter-item "><a href="rust/mini-redis/mini-redis.html"><strong aria-hidden="true">3.2.</strong> mini-redis</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust/mini-redis/hello_tokio.html"><strong aria-hidden="true">3.2.1.</strong> Hello Tokio</a></li><li class="chapter-item "><a href="rust/mini-redis/spawning.html"><strong aria-hidden="true">3.2.2.</strong> Spawning</a></li><li class="chapter-item "><a href="rust/mini-redis/shared_state.html"><strong aria-hidden="true">3.2.3.</strong> Shared state</a></li><li class="chapter-item "><a href="rust/mini-redis/channels.html"><strong aria-hidden="true">3.2.4.</strong> Channels</a></li><li class="chapter-item "><a href="rust/mini-redis/io.html"><strong aria-hidden="true">3.2.5.</strong> I/O</a></li><li class="chapter-item "><a href="rust/mini-redis/framing.html"><strong aria-hidden="true">3.2.6.</strong> Framing</a></li><li class="chapter-item "><a href="rust/mini-redis/async_in_depth.html"><strong aria-hidden="true">3.2.7.</strong> Async in depth</a></li><li class="chapter-item "><a href="rust/mini-redis/select.html"><strong aria-hidden="true">3.2.8.</strong> Select</a></li><li class="chapter-item "><a href="rust/mini-redis/streams.html"><strong aria-hidden="true">3.2.9.</strong> Streams</a></li></ol></li><li class="chapter-item "><a href="rust/tokio/tokio.html"><strong aria-hidden="true">3.3.</strong> Tokio</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust/tokio/topics.html"><strong aria-hidden="true">3.3.1.</strong> Topics TODO</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rust/tokio/bridging_with_sync_code.html"><strong aria-hidden="true">3.3.1.1.</strong> Bridging with sync code TODO</a></li><li class="chapter-item "><a href="rust/tokio/graceful_shutdown.html"><strong aria-hidden="true">3.3.1.2.</strong> Graceful Shutdown TODO</a></li><li class="chapter-item "><a href="rust/tokio/getting_started_with_tracing.html"><strong aria-hidden="true">3.3.1.3.</strong> Getting started with Tracing TODO</a></li><li class="chapter-item "><a href="rust/tokio/next_steps_with_tracing.html"><strong aria-hidden="true">3.3.1.4.</strong> Next steps with Tracing TODO</a></li></ol></li></ol></li></ol></li><li class="chapter-item expanded "><a href="network/network.html"><strong aria-hidden="true">4.</strong> Network</a></li><li class="chapter-item expanded "><a href="other-categories/other-categories.html"><strong aria-hidden="true">5.</strong> Other categories</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="other-categories/archlinux/archlinux.html"><strong aria-hidden="true">5.1.</strong> archlinux</a></li><li class="chapter-item "><a href="other-categories/algorithm/algorithm.html"><strong aria-hidden="true">5.2.</strong> algorithm</a></li><li class="chapter-item "><a href="other-categories/database/db_cache.html"><strong aria-hidden="true">5.3.</strong> database</a></li><li class="chapter-item "><a href="other-categories/nc/nc.html"><strong aria-hidden="true">5.4.</strong> nmap-netcat(nc)</a></li><li class="chapter-item "><a href="other-categories/mq/mq.html"><strong aria-hidden="true">5.5.</strong> mq</a></li><li class="chapter-item "><a href="other-categories/mkcert/mkcert.html"><strong aria-hidden="true">5.6.</strong> mkcert</a></li><li class="chapter-item "><a href="other-categories/aria2/aria2.html"><strong aria-hidden="true">5.7.</strong> aria2</a></li><li class="chapter-item "><a href="other-categories/postgres/postgres.html"><strong aria-hidden="true">5.8.</strong> postgres</a></li><li class="chapter-item "><a href="other-categories/pre-commit/pre-commit.html"><strong aria-hidden="true">5.9.</strong> pre-commit</a></li><li class="chapter-item "><a href="other-categories/minio/minio.html"><strong aria-hidden="true">5.10.</strong> minio</a></li><li class="chapter-item "><a href="other-categories/git/git.html"><strong aria-hidden="true">5.11.</strong> git</a></li><li class="chapter-item "><a href="other-categories/croc/croc.html"><strong aria-hidden="true">5.12.</strong> croc</a></li><li class="chapter-item "><a href="other-categories/reality/reality.html"><strong aria-hidden="true">5.13.</strong> REALITY</a></li></ol></li><li class="chapter-item expanded "><a href="blockchain/blockchain.html"><strong aria-hidden="true">6.</strong> Blockchain</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="blockchain/fundamentals.html"><strong aria-hidden="true">6.1.</strong> fundamentals</a></li><li class="chapter-item "><a href="blockchain/substrate/substrate.html"><strong aria-hidden="true">6.2.</strong> substrate TODO</a></li></ol></li><li class="chapter-item expanded "><a href="issues/issues.html"><strong aria-hidden="true">7.</strong> issues and solutions</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="isuues/linux/linux_issues.html"><strong aria-hidden="true">7.1.</strong> linux</a></li><li class="chapter-item "><a href="issues/docker/docker_issues.html"><strong aria-hidden="true">7.2.</strong> docker</a></li><li class="chapter-item "><a href="issues/mysql/mysql_issues.html"><strong aria-hidden="true">7.3.</strong> mysql</a></li><li class="chapter-item "><a href="issues/gitea/gitea_issues.html"><strong aria-hidden="true">7.4.</strong> gitea</a></li><li class="chapter-item "><a href="issues/nginx/nginx_issues.html"><strong aria-hidden="true">7.5.</strong> nginx</a></li></ol></li><li class="chapter-item expanded "><a href="links/links.html"><strong aria-hidden="true">8.</strong> Links</a></li></ol>
         </div>
         <div id="sidebar-resize-handle" class="sidebar-resize-handle">
             <div class="sidebar-resize-indicator"></div>
@@ -4672,6 +4672,87 @@ func reprOfValue(val reflect.Value) string {
     }
 }
 </code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="数据库与缓存的一致性"><a class="header" href="#数据库与缓存的一致性">数据库与缓存的一致性</a></h1>
+<h2 id="常见方案"><a class="header" href="#常见方案">常见方案</a></h2>
+<ol>
+<li>先写缓存，再写数据库</li>
+<li>先写数据库，再写缓存</li>
+<li>先删缓存，再写数据库</li>
+<li>先写数据库，再删缓存</li>
+</ol>
+<h3 id="先写缓存再写数据库"><a class="header" href="#先写缓存再写数据库">先写缓存，再写数据库</a></h3>
+<p>这种方式实际上不可取，比如：</p>
+<p>当一个请求先写入了缓存，然后出现了网络异常，导致写入数据库失败。那么这种情况下缓存里缓存的就是无效数据。</p>
+<h3 id="先写数据库再写缓存"><a class="header" href="#先写数据库再写缓存">先写数据库，再写缓存</a></h3>
+<p>这种方式可以解决上一种方式中无效缓存，但是也存在问题，比如：</p>
+<p>当某一个缓存已经存在，此时一个请求去更新了该缓存对应的数据库记录，然后尝试写缓存的时候失败了，那么此时缓存与数据库的内容产生了不一致。</p>
+<p>也有办法解决，但是仅限于并发度不高的情况，我们可以将这两个操作放在一个事务中，写缓存失败了就回滚事务即可。</p>
+<p><strong>问题</strong>：</p>
+<p>当并发度高了后，很容易发生这类情况：</p>
+<p><strong>当请求 A 和请求 B 尝试修改同一数据库记录时（并发写）</strong></p>
+<ol>
+<li>请求 A 尝试写数据库</li>
+<li>请求 A 写入数据库完成，尝试写入缓存，此时发生了某种问题（比如网络问题）导致写入缓存操作迟迟没有完成</li>
+<li>请求 B 顺利的写数据库并写入了缓存</li>
+<li>请求 A 写入缓存的操作姗姗来迟，成功完成写入缓存操作</li>
+</ol>
+<p>这样的场景下，请求 B 的写入操作是新数据，但是最终缓存中的数据是请求 A 写入的数据，也就是旧数据。新数据被旧数据覆盖了。</p>
+<h3 id="先删缓存再写数据库"><a class="header" href="#先删缓存再写数据库">先删缓存，再写数据库</a></h3>
+<p>对于之前两种需要写入缓存的方式，用删缓存来代替写缓存有一个明显的优势，那就是不需要每次都同时更新数据库和缓存，更加节省系统资源。特别是写多读少的场景，每次都需要写入缓存的开销是非常大的。</p>
+<p>本方案也会在并发下产生一个问题：</p>
+<p><strong>当请求 A 要写入数据库，而请求 B 要读取数据库时（并发读写）</strong></p>
+<ol>
+<li>请求 A 删缓存，尝试写入数据库时发生了网络问题，导致写入数据库操作迟迟没有完成</li>
+<li>请求 B 尝试读取数据
+<ol>
+<li>先读缓存，发现没有缓存</li>
+<li>读数据库，注意此时请求 A 的写入数据库操作还没有完成，如果请求 A 最终能顺利完成，那么此时读取到的马上就会是旧数据</li>
+</ol>
+</li>
+<li>请求 B 读取数据成功，并将数据写入缓存</li>
+<li>请求 A 在请求 B 完成操作后成功将数据写入数据库</li>
+</ol>
+<p>同样会产生缓存与数据库中的数据不一致的问题。但是可以解决：</p>
+<h4 id="延迟双删"><a class="header" href="#延迟双删">延迟双删</a></h4>
+<p>删一次不够，那我们就删两次，变成 <strong>先删缓存，再写数据库，延迟一定时间后再删缓存</strong>。</p>
+<h3 id="先写数据库再删缓存"><a class="header" href="#先写数据库再删缓存">先写数据库，再删缓存</a></h3>
+<p>那么这种方案看起来总算近乎“完美”了吧，就算有并发读写，写请求完成前，读请求读取了旧值并将缓存设置成了旧值，但是最终写请求完成后会删除旧的缓存。</p>
+<p>这中间短暂的数据库与缓存的不一致通常不被认为是错误，是可容忍的业务延迟。</p>
+<p>但是所有的删缓存操作其实都还有个情况，那就是删缓存这个操作是有可能失败的，所以通常需要*<strong>重试机制</strong>，删缓存失败了我们就重试。</p>
+<p>其实本方案有一个极端场景可能会导致数据库与缓存不一致：</p>
+<p><strong>并发读写时，读请求先到来，并且原来的缓存正好失效</strong>：</p>
+<ol>
+<li>读请求到来时，发现没有缓存，尝试读数据库，但是读数据库时因为某种意外导致读数据库非常慢，一直没有完成</li>
+<li>写请求成功在读请求读数据库完成之前写入了数据库，并且删除了缓存（此时本身就没有缓存）</li>
+<li>读请求成功读取完数据库，并写入缓存</li>
+</ol>
+<p>在 mysql mvcc 机制下，写请求的成功写入不影响读请求发生时，读请求看到的数据，也就是说读请求最终读出来的是旧数据，那么写入缓存的自然也是旧数据。</p>
+<p>但是这种场景是非常极端的，因为我们都知道，同样情况下，读肯定是比写要快的，况且还多了个删缓存的操作，这种场景的发生情况得是读比写还慢，并且比写 + 访问缓存数据库并删除缓存还慢，实属极端。</p>
+<h2 id="尝试将数据库与缓存的一致性保障从业务逻辑中抽离出来"><a class="header" href="#尝试将数据库与缓存的一致性保障从业务逻辑中抽离出来">尝试将数据库与缓存的一致性保障从业务逻辑中抽离出来</a></h2>
+<p>“先写数据库，再删缓存” 已经很够用了，因为上面说的那种极端情况非常罕见。</p>
+<p>这里想说的是能否有这样一种方式来解决数据库与缓存的一致性：</p>
+<p>以 Mysql 为例，Mysql 的 binlog 通常被用来在多个数据库实例之间进行数据同步，那能否利用 binlog 来达到我们的目的？</p>
+<p>为此我做了一个 POC (概念验证) <a href="https://github.com/M4n5ter/cache-killer">cache-killer</a>。下面来讲一下我的实现。</p>
+<p>我通过实时监听 mysql 最新的 binlog 日志，并从中解析新的事件，当事件类型为 UPDATE_ROW 或是 DELETE_ROW 时获取 <code>schema</code>, <code>table_ID</code>, <code>Rows[0][0]</code>， <code>Rows[0][0]</code>是受影响的记录的第一个列的值，通常来说就是主键了, 而 <code>table_ID</code>会通过寻找 <code>TABLE_MAP</code> 事件找到对应的数据库表，最后会拼装成这样 <code>数据库:表名:主键值</code>这是场景的缓存键的形式,当得到需要删除的缓存键时，接下来要做的就是删除缓存了。大致流程如下：</p>
+<ol>
+<li>实时解析 binlog，并拼装出缓存键</li>
+<li>尝试删除缓存
+<ol>
+<li>删除成功则万事大吉</li>
+<li>因各种原因删除失败则将对应的缓存键放入"死亡名单"</li>
+</ol>
+</li>
+<li>后台会有一个定时任务，定时检查"死亡名单"</li>
+<li>若"死亡名单"不为空，尝试从中取出缓存键，再次尝试"杀死"
+<ol>
+<li>删除成功则将对应缓存键从"死亡名单"中移除</li>
+<li>删除失败将对应缓存键的计数器加一</li>
+</ol>
+</li>
+<li>当定时任务尝试指定次数后都没能将缓存杀死，那么会将对应键从"死亡名单"移除，并标记为"不可摧毁"后放入一个通道中</li>
+<li>当"不可摧毁"通道中有内容时，将其中的键取出后通知系统管理员手动处理对应的键</li>
+</ol>
+<p>这样的好处就是在代码中不再需要处理删除键的操作，并且也有充分的机制来保证对删除缓存操作的重试。当然，当始终无法"杀死"一个缓存时，通过一定方式（邮件，钉钉，企业微信，飞书等）通知系统管理员来手动处理事件是必要的。</p>
 <div style="break-before: page; page-break-before: always;"></div><h2 id="nmap-netcatnc"><a class="header" href="#nmap-netcatnc">nmap-netcat(nc)</a></h2>
 <p>nc 是由 C 编写的非常强悍的网络工具，<code>nc</code> 主要有 4 个版本，gnu nc （2004 年停止维护，也叫 nc traditional）， openbsd nc（重写了 gnu nc，在正常维护），nmap-netcat（也叫 ncat，由 nmap 重写 nc traditional，被称为 21 世纪的 netcat，也是功能最多的 nc）。</p>
 <p>下面我介绍的就是 nmap-netcat，出现的不论是 <code>nc</code> 还是 <code>ncat</code> 请一律当 <code>ncat</code> 处理，因为部分在 CentOS 上执行，CentOS上的 <code>nc</code> 就是 <code>ncat</code>。</p>
